# tgoskits

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml  test_aarch64.ps1  test_aarch64.sh  test_aarch64_el1.sh  test_aarch64_el2.sh
.cargo/: config.toml
.github/workflows/: ci.yml  release-plz.yml  starryos-linux-guest-oracle.yml  test.yml
apps/helloworld/: build.rs  qemu-aarch64.toml
apps/helloworld/src/: main.rs
build-config/: aarch64.toml
components/aarch64_sysreg/: Cargo.toml
components/arm_pl011/: Cargo.toml
components/arm_pl031/: Cargo.toml
components/arm_vcpu/: Cargo.toml
components/arm_vgic/: Cargo.toml
components/ax-lazyinit/: Cargo.toml
components/axaddrspace/: Cargo.toml
components/axallocator/: Cargo.toml
components/axbacktrace/: Cargo.toml
components/axconfig-gen/: Cargo.toml
components/axconfig-gen/axconfig-gen/: Cargo.toml
components/axconfig-gen/axconfig-macros/: Cargo.toml
components/axcpu/: Cargo.toml
components/axdevice/: Cargo.toml
components/axdevice_base/: Cargo.toml
components/axdriver_crates/: Cargo.toml
components/axdriver_crates/axdriver_virtio/: Cargo.toml
components/axdriver_crates/axdriver_virtio/src/: input.rs
components/axdriver_crates/axdriver_vsock/: Cargo.toml
components/axerrno/: Cargo.toml
components/axfs-ng-vfs/: Cargo.toml
components/axfs_crates/: Cargo.toml
components/axfs_crates/axfs_vfs/: Cargo.toml
components/axhvc/: Cargo.toml
components/axio/: Cargo.toml
components/axklib/: Cargo.toml
components/axmm_crates/: Cargo.toml
components/axmm_crates/memory_addr/: Cargo.toml
components/axmm_crates/memory_set/: Cargo.toml
components/axplat_crates/: Cargo.toml
components/axpoll/: Cargo.toml
components/axsched/: Cargo.toml
components/axvcpu/: Cargo.toml
components/axvisor_api/: Cargo.toml
components/axvm/: Cargo.toml
components/axvmconfig/: Cargo.toml
components/bitmap-allocator/: Cargo.toml
components/cap_access/: Cargo.toml
components/cpumask/: Cargo.toml
components/crate_interface/: Cargo.toml
components/ctor_bare/: Cargo.toml
components/fxmac_rs/: Cargo.toml  README.md  README_CN.md
components/handler_table/: Cargo.toml
components/int_ratio/: Cargo.toml
components/kernel_guard/: Cargo.toml
components/kspin/: Cargo.toml
components/linked_list_r4l/: Cargo.toml
components/page_table_multiarch/: Cargo.toml
components/percpu/: Cargo.toml
components/range-alloc-arceos/: Cargo.toml
components/riscv-h/: Cargo.toml
components/riscv_plic/: Cargo.toml
components/riscv_vcpu/: Cargo.toml
components/riscv_vplic/: Cargo.toml
components/rsext4/: Cargo.toml
components/scope-local/: Cargo.toml
components/starry-process/: Cargo.toml
components/starry-signal/: Cargo.toml
components/starry-smoltcp/: Cargo.toml  README.md  README_CN.md
components/starry-vm/: Cargo.toml
components/timer_list/: Cargo.toml
components/x86_vcpu/: Cargo.toml
components/x86_vlapic/: Cargo.toml
crates/bare-test/: Cargo.toml
crates/dma-api/: Cargo.toml  README.md
crates/page-table-generic/: Cargo.toml
crates/somehal/: Cargo.toml  build.rs
crates/sparreal-kernel/: Cargo.toml
crates/sparreal-rt/: Cargo.toml
docs/: arceos-guide.md  arceos-internals.md  components.md  repo.md  starryos-guide.md  starryos-internals.md  starryos-syscall-behavior-evidence.md  starryos-syscall-catalog.yaml  starryos-syscall-compat-divergence.md  starryos-syscall-compat-matrix.yaml  starryos-syscall-dispatch-table.md  starryos-syscall-dispatch.json  starryos-syscall-probe-rollout.yaml  starryos-syscall-progress-rounds.md  starryos-syscall-s0-batch-summary.md  starryos-syscall-testing-method.md  systemd-support.md  tgoskits-dependency.md
docs/crates/: README.md  arceos-affinity.md  arceos-display.md  arceos-exception.md  arceos-fs-shell.md  arceos-irq.md  arceos-memtest.md  arceos-net-echoserver.md  arceos-net-httpclient.md  arceos-net-httpserver.md  arceos-net-udpserver.md  arceos-parallel.md  arceos-priority.md  arceos-sleep.md  arceos-tls.md  arceos-wait-queue.md  arceos-yield.md  arceos_api.md  arceos_posix_api.md  arm_pl031.md  ax-api.md  ax-config.md  ax-display.md  ax-dma.md  ax-driver.md  ax-feat.md  ax-fs-ng.md  ax-hal.md  ax-helloworld-myplat.md  ax-helloworld.md  ax-httpclient.md  ax-httpserver.md  ax-input.md  ax-ipi.md  ax-libc.md  ax-log.md  ax-net-ng.md  ax-plat-riscv64-qemu-virt.md  ax-plat-x86-pc.md  ax-posix-api.md  (+61 more)
examples/tgmath/: Cargo.toml
os/StarryOS/: Cargo.toml
os/arceos/: .gitignore  Cargo.toml
os/arceos/examples/helloworld/: Cargo.toml
os/arceos/examples/httpclient/: Cargo.toml
os/arceos/modules/axconfig/: Cargo.toml  README.md
os/arceos/modules/axdisplay/: Cargo.toml
os/arceos/modules/axdma/: Cargo.toml
os/arceos/modules/axdma/src/: lib.rs
os/arceos/modules/axinput/: Cargo.toml
os/arceos/modules/axipi/: Cargo.toml
os/arceos/modules/axipi/src/: lib.rs
os/arceos/modules/axlog/: Cargo.toml
os/arceos/modules/axlog/src/: lib.rs
os/arceos/ulib/axstd/: Cargo.toml
os/arceos/ulib/axstd/src/fs/: dir.rs
os/arceos/ulib/axstd/src/io/: stdio.rs
os/arceos/ulib/axstd/src/net/: socket_addr.rs  udp.rs
os/arceos/ulib/axstd/src/thread/: multi.rs
os/axvisor/: CHANGELOG.md  Cargo.toml
platform/axplat-dyn/: Cargo.toml
platform/somehal/: link.ld
platform/someplat/: Cargo.toml
platform/sparreal-rt/: Cargo.toml
platform/x86-qemu-q35/: Cargo.toml
scripts/: _materialize_badfd.py  build-debian-rootfs.sh  bump_component_versions.py  check_compat_matrix.py  check_probe_coverage.py  extract_starry_syscalls.py  gen_crate_docs.py  gen_probe_rollout.py  gen_syscall_probes.py  materialize_syscall_batch.py  publish.py  render_starry_syscall_inventory.py  starryos-probes-ci.sh
scripts/axbuild/: CHANGELOG.md  Cargo.toml
scripts/repo/: repos.csv
scripts/test/: clippy_crates.csv  std_crates.csv
test-suit/arceos/rust/task/stress/: Cargo.toml
test-suit/arceos/rust/task/stress/src/: main.rs
test-suit/async/: Cargo.toml  loongarch64.toml  qemu-la64.toml
test-suit/timer/: aarch64.toml  qemu-la64.toml
xtask/src/: main.rs
(+329 files in other folders)
