[package]
name = "simple-sdmmc"
version = "0.1.0"
description = "A simple SD/MMC driver based on SDIO."
edition = "2024"
authors = ["Asakura Mizu <asakuramizu111@gmail.com>"]
publish = ["crates-io"]

[dependencies]
bitfield-struct = "0.11.0"
log = "0.4"
volatile = { version = "0.6.1", features = ["derive"] }
