[package]
name = "axvcpu"
authors = ["aarkegz <aarkegz@gmail.com>"]
version = "0.5.2"
edition = "2024"
categories = ["virtualization", "no-std"]
description = "Virtual CPU abstraction for ArceOS hypervisor"
repository = "https://github.com/arceos-hypervisor/axvcpu"
keywords = ["vcpu", "hypervisor", "arceos"]
license = "Apache-2.0"

[dependencies]
ax-errno = "0.4.3"
ax-memory-addr = "0.6.2"
ax-percpu = "0.4.4"
axaddrspace = "0.5.2"
axvisor_api = "0.5.2"
