[package]
name = "axvcpu"
authors = ["aarkegz <aarkegz@gmail.com>"]
version = "0.5.3"
edition = "2024"
categories = ["virtualization", "no-std"]
description = "Virtual CPU abstraction for ArceOS hypervisor"
repository = "https://github.com/arceos-hypervisor/axvcpu"
keywords = ["vcpu", "hypervisor", "arceos"]
license = "Apache-2.0"

[dependencies]
ax-errno = "0.4.5"
ax-memory-addr = "0.6.3"
ax-percpu = "0.4.5"
axaddrspace = "0.5.3"
axvisor_api = "0.5.3"
