[package]
name = "axvm"
authors = ["aarkegz <aarkegz@gmail.com>"]
version = "0.5.1"
edition = "2024"
categories = ["virtualization", "no-std"]
description = "Virtual Machine resource management crate for ArceOS's hypervisor variant."
repository = "https://github.com/arceos-hypervisor/axvm"
keywords = ["vm", "hypervisor", "arceos"]
license = "Apache-2.0"

[features]
default = ["vmx"]
vmx = []
4-level-ept = []   # TODO: Realize 4-level-ept on x86_64 and riscv64.

[dependencies]
log = "0.4"
cfg-if = "1.0"
spin = "0.10"

# System independent crates provided by ArceOS.
ax-errno = "0.4.2"
ax-cpumask = "0.3.0"
# ax-kspin = "0.1.0"
ax-memory-addr = "0.6.1"
ax-page-table-entry = { version = "0.8.1", features = ["arm-el2"] }
ax-page-table-multiarch = "0.8.1"
ax-percpu = { version = "0.4.3", features = ["arm-el2"] }

# System dependent modules provided by ArceOS-Hypervisor.
axvcpu = "0.5.1"
axaddrspace = "0.5.1"
axvisor_api = "0.5.1"
axdevice = "0.4.3"
axdevice_base = "0.4.3"
axvmconfig = { version = "0.4.3", default-features = false }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_vcpu = "0.5.1"

[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv_vcpu = "0.5.1"

[target.'cfg(target_arch = "aarch64")'.dependencies]
arm_vcpu = "0.5.1"
arm_vgic = { version = "0.4.3", features = ["vgicv3"] }
