[package]
name = "ax-config-gen"
description = "A TOML-based configuration generation tool for ArceOS."
categories = ["config", "parsing", "parser-implementations"]
keywords = ["arceos", "config", "toml"]
version = "0.4.2"
repository = "https://github.com/rcore-os/tgoskits"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]
rust-version = "1.76"
license = "Apache-2.0"

[dependencies]
toml_edit = { version = "0.22" }
clap = { version = "4", features = ["derive"] }
