[package]
name = "ax-driver-virtio"
edition = "2021"
version = "0.3.6"
repository = "https://github.com/rcore-os/tgoskits"
authors = [
    "Yuekai Jia <equation618@gmail.com>",
    "朝倉水希 <asakuramizu111@gmail.com>",
    "Yu Chen <yuchen@tsinghua.edu.cn>",
]
description = "Wrappers of some devices in the `virtio-drivers` crate, that implement traits in the `ax-driver-base` series crates"
keywords = ["arceos", "driver", "virtio"]
categories = ["os", "no-std", "hardware-support"]
readme = "README.md"
license = "Apache-2.0"

[features]
alloc = ["virtio-drivers/alloc"]
block = ["ax-driver-block"]
gpu = ["alloc", "ax-driver-display"]
input = ["alloc", "ax-driver-input"]
net = ["alloc", "ax-driver-net"]
socket = ["alloc", "ax-driver-vsock"]

[dependencies]
ax-driver-base = { version = "0.3.6" }
ax-driver-block = { version = "0.3.6", optional = true }
ax-driver-display = { version = "0.3.6", optional = true }
ax-driver-input = { version = "0.3.6", optional = true }
ax-driver-net = { version = "0.3.6", optional = true }
ax-driver-vsock = { version = "0.3.6", optional = true }
log = { workspace = true }
virtio-drivers = { version = "0.13.0", default-features = false }
