[package]
name = "ax-driver-vsock"
edition = "2021"
version = "0.3.6"
repository = "https://github.com/rcore-os/tgoskits"
authors = [
    "Yuekai Jia <equation618@gmail.com>",
    "朝倉水希 <asakuramizu111@gmail.com>",
    "Yu Chen <yuchen@tsinghua.edu.cn>",
]
description = "Common traits and types for vsock drivers"
keywords = ["arceos", "driver", "vsock"]
categories = ["os", "no-std", "hardware-support"]
readme = "README.md"
license = "Apache-2.0"

[features]
default = []

[dependencies]
ax-driver-base = { version = "0.3.6" }
log = "0.4"
