[package]
name = "ax-memory-addr"
description = "Wrappers and helper functions for physical and virtual addresses"
keywords = ["arceos", "address", "virtual-memory"]

version = "0.6.2"
repository = "https://github.com/rcore-os/tgoskits"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>", "aarkegz <aarkegz@gmail.com>"]
categories = ["os", "memory-management", "no-std"]
rust-version = "1.70.0"
license = "Apache-2.0"

[dependencies]
