[package]
name = "ax-memory-set"
description = "Data structures and operations for managing memory mappings"
keywords = ["arceos", "virtual-memory", "memory-area", "mmap"]

version = "0.6.2"
repository = "https://github.com/rcore-os/tgoskits"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>", "aarkegz <aarkegz@gmail.com>"]
categories = ["os", "memory-management", "no-std"]
rust-version = "1.70.0"
license = "Apache-2.0"

[dependencies]
ax-errno = { version = "0.4.3", optional = true }
ax-memory-addr = { path = "../memory_addr", version = "0.6.2" }

[features]
ax-errno = ["dep:ax-errno"]
