[package]
name = "ax-httpclient"
version = "0.3.0"
publish = false
repository = "https://github.com/rcore-os/tgoskits"
edition = "2024"
authors = ["Yuekai Jia <equation618@gmail.com>", "Dashuai Wu <wudashuaijss@foxmail.com>"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ax-std = { workspace = true, features = ["net"], optional = true }

[features]
default = []
dns = ["ax-std?/dns"]
