[package]
name = "ax-display"
version = "0.5.3"
repository = "https://github.com/rcore-os/tgoskits"
edition = "2024"
authors = ["Shiping Yuan <robert_yuan@pku.edu.com>"]
description = "ArceOS graphics module"
license = "Apache-2.0"

[dependencies]
ax-driver = { workspace = true, features = ["display"] }
ax-sync.workspace = true
ax-lazyinit.workspace = true
log.workspace = true
