[package]
name = "ax-dma"
edition = "2024"
version = "0.5.3"
repository = "https://github.com/rcore-os/tgoskits"
authors = ["Zhour Rui <zrufo747@outlook.com>"]
description = "ArceOS global DMA allocator"
keywords.workspace = true
categories.workspace = true
license = "Apache-2.0"

[features]
default = []
buddy-slab = ["dep:buddy-slab-allocator", "ax-alloc/buddy-slab"]

[dependencies]
ax-alloc.workspace = true
ax-allocator.workspace = true
ax-config.workspace = true
ax-hal.workspace = true
ax-mm.workspace = true
buddy-slab-allocator = { workspace = true, optional = true }
ax-kspin.workspace = true
log.workspace = true
ax-memory-addr.workspace = true
