[package]
name = "ax-input"
version = "0.5.3"
repository = "https://github.com/rcore-os/tgoskits"
edition = "2024"
authors.workspace = true
description = "Input device management for ArceOS"
keywords.workspace = true
categories.workspace = true
license = "Apache-2.0"

[dependencies]
ax-driver = { workspace = true, features = ["input"] }
ax-sync = { workspace = true }

ax-lazyinit = { workspace = true }
log = { workspace = true }
