[package]
name = "ax-ipi"
version = "0.5.3"
repository = "https://github.com/rcore-os/tgoskits"
edition = "2024"
authors = ["Keyang Hu <keyang.hu@qq.com>"]
description = "ArceOS IPI management module"
license = "Apache-2.0"

[features]
default = []

[dependencies]
ax-config.workspace = true
ax-hal = { workspace = true, features = ["ipi"] }
ax-kspin.workspace = true
ax-lazyinit.workspace = true
log.workspace = true
ax-percpu.workspace = true
