[package]
name = "ax-log"
version = "0.5.3"
repository = "https://github.com/rcore-os/tgoskits"
edition = "2024"
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "Macros for multi-level formatted logging used by ArceOS"
license = "Apache-2.0"

[features]
std = ["dep:chrono"]
default = []

[dependencies]
cfg-if.workspace = true
chrono = { workspace = true, default-features = true, optional = true }
ax-crate-interface.workspace = true
ax-kspin.workspace = true
log.workspace = true

# [dev-dependencies]
[target.'cfg(not(target_os="none"))'.dev-dependencies]
ax-log = { path = ".", features = ["std"] }
