[package]
name = "ax-std"
version.workspace = true
edition.workspace = true
authors = [
    "Yuekai Jia <equation618@gmail.com>",
    "yanjuguang <coolyanjg@163.com>",
    "wudashuai <wu-ds20@mails.tsinghua.edu.cn>",
    "yfblock <321353225@qq.com>",
    "scPointer <bhy18@mails.tsinghua.edu.cn>",
    "Shiping Yuan <robert_yuan@pku.edu.com>",
]
description = "ArceOS user library with an interface similar to rust std"
license.workspace = true
homepage.workspace = true
repository = "https://github.com/arceos-org/arceos/tree/main/ulib/axstd"

[features]
default = []

# Multicore
smp = ["axfeat/smp", "kspin/smp"]

# Floating point/SIMD
fp-simd = ["axfeat/fp-simd"]

# User space support
uspace = ["axfeat/uspace"]

# Hypervisor support
hv = ["axfeat/hv"]

# Interrupts
irq = ["ax-api/irq", "axfeat/irq"]
ipi = ["ax-api/ipi", "axfeat/ipi"]

# Custom or default platforms
myplat = ["axfeat/myplat"]
defplat = ["axfeat/defplat"]
plat-dyn = ["axfeat/plat-dyn"]

# Memory
alloc = ["ax-api/alloc", "axfeat/alloc", "axio/alloc"]
alloc-tlsf = ["axfeat/alloc-tlsf"]
alloc-slab = ["axfeat/alloc-slab"]
alloc-buddy = ["axfeat/alloc-buddy"]
alloc-level-1 = ["axfeat/alloc-level-1", "alloc"]
page-alloc-64g = ["axfeat/page-alloc-64g"]                 # Support up to 64G memory capacity
page-alloc-4g = ["axfeat/page-alloc-4g"]                   # Support up to 4G memory capacity
paging = ["axfeat/paging"]
dma = ["ax-api/dma", "axfeat/dma"]
tls = ["axfeat/tls"]

# Multi-threading and scheduler
multitask = ["ax-api/multitask", "axfeat/multitask"]
task-ext = ["axfeat/task-ext"]
sched-fifo = ["axfeat/sched-fifo"]
sched-rr = ["axfeat/sched-rr"]
sched-cfs = ["axfeat/sched-cfs"]

# File system
fs = ["ax-api/fs", "axfeat/fs"]
ext4fs = ["ax-api/fs", "axfeat/fs"]
fatfs = ["ax-api/fs", "axfeat/fs"]

# Networking
net = ["ax-api/net", "axfeat/net"]
dns = []

# Display
display = ["ax-api/display", "axfeat/display"]

# Input
input = ["axfeat/input"]

# Real Time Clock (RTC) Driver.
rtc = ["axfeat/rtc"]

# Device drivers
bus-mmio = ["axfeat/bus-mmio"]
bus-pci = ["axfeat/bus-pci"]
driver-ramdisk = ["axfeat/driver-ramdisk"]
driver-sdmmc = ["axfeat/driver-sdmmc"]
driver-ixgbe = ["axfeat/driver-ixgbe"]
driver-fxmac = ["axfeat/driver-fxmac"]
driver-bcm2835-sdhci = ["axfeat/driver-bcm2835-sdhci"]
driver-ahci = ["axfeat/driver-ahci"]

# Backtrace
dwarf = ["axfeat/dwarf"]

[dependencies]
ax-api.workspace = true
axerrno.workspace = true
axfeat.workspace = true
axio.workspace = true
kspin.workspace = true
lazyinit.workspace = true
lock_api.workspace = true
spin.workspace = true
